--- a/Level 053/homework/index3.html
+++ b/Level 053/homework/index3.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <!-- Image ელემენტი -->
-    <img id="myImage" src="image1.jpg" alt="Initial Image" style="width: 300px; height: 200px;">
+    <img id="myImage" src="/design/mobile-design.jpg" alt="zangi" style="width: 300px; height: 200px;">
     
     <!-- Button ელემენტი -->
     <button id="changeImageButton">Change Image</button>
