--- a/Level 053/homework/index2.html
+++ b/Level 053/homework/index2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <!-- Image ელემენტი -->
-    <img id="myImage" src="example.jpg" alt="Example Image" style="width: 300px; height: 200px;">
+    <img id="myImage" src="/images/illustration-audience-growth.webp" alt="Example Image" style="width: 300px; height: 200px;">
     
     <!-- Button ელემენტი -->
     <button id="resizeButton">Change Image Size</button>
