--- a/Level 039/homework/index.html
+++ b/Level 039/homework/index.html
@@ -1,1 +1,82 @@
-<h1>jguf 25 shi ar mouciat</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Profile</title>
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      background-color: #f5f5f5;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    .profile-card {
+      background-color: #ffffff;
+      width: 300px;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      text-align: center;
+    }
+    .profile-card img {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      margin-bottom: 20px;
+    }
+    .profile-card h2 {
+      margin: 0;
+      font-size: 22px;
+      color: #333;
+    }
+    .profile-card p {
+      color: #666;
+      margin: 10px 0;
+    }
+    .social-links {
+      display: flex;
+      justify-content: center;
+      gap: 15px;
+      margin-top: 20px;
+    }
+    .social-links a {
+      text-decoration: none;
+      color: #4c8bf5;
+      font-size: 20px;
+      transition: color 0.3s ease;
+    }
+    .social-links a:hover {
+      color: #2c6cc4;
+    }
+    .card-footer {
+      margin-top: 30px;
+      font-size: 14px;
+      color: #888;
+    }
+    .card-footer a {
+      text-decoration: none;
+      color: #4c8bf5;
+    }
+  </style>
+</head>
+<body>
+  <div class="profile-card">
+    <img src="your-image.jpg" alt="Profile Picture">
+    <h2>Your Name</h2>
+    <p>Frontend Developer</p>
+    <div class="social-links">
+      <a href="https://twitter.com/yourprofile" target="_blank">Twitter</a>
+      <a href="https://github.com/yourprofile" target="_blank">GitHub</a>
+      <a href="https://linkedin.com/in/yourprofile" target="_blank">LinkedIn</a>
+    </div>
+    <div class="card-footer">
+      <p>Created by <a href="https://www.yourwebsite.com" target="_blank">Your Name</a></p>
+    </div>
+  </div>
+</body>
+</html>
