--- a/Level 067/Classwork/index.html
+++ b/Level 067/Classwork/index.html
@@ -38,11 +38,7 @@
         <label>
             <input type="checkbox" required> I consent to being contacted by the team *
         </label>
-        <span class="error">To submit this form, please consent to being contacted</span>
-    <button>sumbit</button>
-    </div>
-    
-    
+        <span class="error">To submit this form, please consent to being contacted</h1>
 <script src="script.js"></script>
 </body>
 </html>
