--- a/project for exam/abouts.html
+++ b/project for exam/abouts.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="./main.html" class="link">home</a><!--   nav bar -->
-        <a href="martial arts.html" class="link">about</a>   
-        <a href="./events.html" class="link">events</a>    
-        <a href="./contacts.html" class="link">contact</a>
+        <a href="mian.html" class="link">home</a><!--   nav bar -->
+        <a href="martialart.html" class="link">martial arts</a>   
+        <a href="./event.html" class="link">events</a>    
+        <a href="./contact.html" class="link">contact</a>
     </div>
     <div class="goa">
         <img src="/images/channels4_profile (1).jpg" class="goaimg" alt="goa"> <!-- goa img -->
