--- a/project for exam/event.html
+++ b/project for exam/event.html
@@ -12,6 +12,7 @@
         <a href="./about.html" class="link">about</a>   
         <a href="./events.html" class="link">events</a>    
         <a href="./contacts.html" class="link">contact</a>
+        <a href="./martialart.html"class="link">martial arts</a>
     </div>
     <div class="goa">
         <img src="/images/channels4_profile (1).jpg" class="goaimg" alt="goa"> <!-- goa img -->
@@ -19,18 +20,18 @@
        <h1 class="goatx">events</h1>
        <div class="goaland">
         <img src="/images/images.jpg" alt="logo"  class="goalandimg">
-        <p class="goap">Goa land is one of events in goa when we go <br>
-            and plan somthing in nature there is also very fun <br>
-            activitys.in this event whole goa gets together and its very fun.</p>
+        <p class="goap">one of events in goa when we go <br>
+            and we go somwhere like out of city and there all groups meet up<br>
+            there is so much food (what i like) and so many activitys that you can do its verry fun.</p>
        </div>
 
        <div class="ab">
         <img src="/images/hqdefault.jpg" alt="logo" class="goalandim">
         <p class="goap">
-            this is hackathon my favourite event in goa <br>
-            here chosen grups get together and compeate <br>
-            for a prize.hackathon is a programing <br>
-            marathon and its super fun.
+            this is hackathon my one of event in goa <br>
+            over here some groups in goa goes to same office <br>
+            and they chose groups there is many pirze <br>
+            and it makes hakaton super fun.
         </p>
        </div>
         </div>
