--- a/project for exam/martialart.html
+++ b/project for exam/martialart.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="./main.html" class="link">home</a><!--   nav bar -->
-        <a href="./about.html" class="link">about</a>   
-        <a href="./martial arts.html"class="link">martial arts</a>
-        <a href="./contacts.html" class="link">contact</a>
+        <a href="mian.html" class="link">home</a><!--   nav bar -->
+        <a href="./abouts.html" class="link">about</a>   
+        <a href="martialart.html"class="link">martial arts</a>
+        <a href="contact.html" class="link">contact</a>
         <a href="events.html"class="link">events</a>
     </div>
     <div class="goa">
