--- a/project for exam/mian.html
+++ b/project for exam/mian.html
@@ -9,10 +9,10 @@
 <body>
     <div class="navbar">
         <a href="#" class="link">home</a><!--   nav bar -->
-        <a href="./about.html" class="link">about</a>   
-        <a href="./events.html" class="link">events</a>    
-        <a href="./contacts.html" class="link">contact</a>
-        <a href="./martial arts.html"class="link">martial arts</a>
+        <a href="./abouts.html" class="link">about</a>   
+        <a href="./event.html" class="link">events</a>    
+        <a href="contact.html" class="link">contact</a>
+        <a href="martialart.html"class="link">martial arts</a>
     </div>
     <div class="goa">
         <img src="/images/channels4_profile (1).jpg" class="goaimg" alt="goa"> <!-- goa img -->
