--- a/project for exam/abouts.html
+++ b/project for exam/abouts.html
@@ -17,7 +17,7 @@
         <img src="/images/channels4_profile (1).jpg" class="goaimg" alt="goa"> <!-- goa img -->
      <h1 class="goatxt">  <b><p>"GOA" stands for goal oriented academy</p>
         <p>in goa u will learn high level programing </p>
-        <p>which helps you to not be virgin and dont spend time on those usless games</p></b></h1>
+        <p>which helps you to learn and be succesfull in your future in goa we have rules wich is we cant play games and many more.</p></b></h1>
     </div>
     <script src="about.js"></script>
 </body>
