--- a/project for exam/event.html
+++ b/project for exam/event.html
@@ -9,9 +9,9 @@
 <body>
     <div class="navbar">
         <a href="./main.html" class="link">home</a><!--   nav bar -->
-        <a href="./about.html" class="link">about</a>   
+        <a href="./abouts.html" class="link">about</a>   
         <a href="./events.html" class="link">events</a>    
-        <a href="./contacts.html" class="link">contact</a>
+        <a href="./contact.html" class="link">contact</a>
         <a href="./martialart.html"class="link">martial arts</a>
     </div>
     <div class="goa">
